# whoop-hermes-agent-plugin

./: .gitignore  README.md  __init__.py  after-install.md  automations.py  cli.py  client.py  config.py  oauth.py  plugin.yaml  provider.py  pyproject.toml  requirements.txt  store.py  tools.py  visuals.py
docs/: privacy-policy-template.md
scripts/: whoop_daily_recap.py
skills/whoop-coach/: SKILL.md
skills/whoop-visual-reports/: SKILL.md
skills/whoop-visual-reports/agents/: openai.yaml
skills/whoop-visual-reports/references/: report-schema.md
skills/whoop-visual-reports/scripts/: render_report.py
tests/: test_automations.py  test_cli.py  test_client.py  test_provider.py  test_store.py  test_tools.py  test_visuals.py
tests/fixtures/: workout_visual.json
