[project]
name = "whoop-hermes-agent-plugin"
version = "0.1.0"
description = "Official WHOOP API and webhook integration for Hermes Agent + Inkbox"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9", "Pillow>=10"]

[project.optional-dependencies]
test = ["pytest>=8", "ruff>=0.11"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 110
